Downgraded to Java 8. Java 11 is still required to build and run test due to Mockito dependency.